# AutosarChecker

./: .gitignore  CMakeLists.txt
examples/: A7_2_4.cpp
include/: A7_2_2.h  A7_2_3.h  A7_2_4.h  report.h
src/: A7_2_2.cpp  A7_2_3.cpp  A7_2_4.cpp  CMakeLists.txt  register_checkers.cpp  report.cpp
